--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
 <body>
 	<div class="container">
 		<div class="board">
-			<div class="box">1</div>
-			<div class="box">2</div>
-			<div class="box">3</div>
-			<div class="box">4</div>
-			<div class="box">5</div>
-			<div class="box">6</div>
-			<div class="box">7</div>
-			<div class="box">8</div>
-			<div class="box">9</div>
+			<div class="box"></div>
+			<div class="box"></div>
+			<div class="box"></div>
+			<div class="box"></div>
+			<div class="box"></div>
+			<div class="box"></div>
+			<div class="box"></div>
+			<div class="box"></div>
+			<div class="box"></div>
+			<p>Player X</p>
 		</div>
 	</div>
 	<script src="jquerylibrary.js"></script>
