--- a/index.html
+++ b/index.html
@@ -8,16 +8,20 @@
 <body>
 	<div class="container">
 		<div class="board">
-			<div class="box"></div>
-			<div class="box"></div>
-			<div class="box"></div>
-			<div class="box"></div>
-			<div class="box"></div>
-			<div class="box"></div>
-			<div class="box"></div>
-			<div class="box"></div>
-			<div class="box"></div>
+			<div class="wrap">
+			<div class="box" id="b1"></div>
+			<div class="box" id="b2"></div>
+			<div class="box" id="b3"></div>
+			<div class="box" id="b4"></div>
+			<div class="box" id="b5"></div>
+			<div class="box" id="b6"></div>
+			<div class="box" id="b7"></div>
+			<div class="box" id="b8"></div>
+			<div class="box" id="b9"></div>
 			<p>Player X</p>
+			</div>
+				
+
 		</div>
 	</div>
 	<script src="jquerylibrary.js"></script>
